added ratings and icon images

--- a/fresh.html
+++ b/fresh.html
@@ -52,30 +52,30 @@
     </div>
     
     <div class="main">
-      <div class="products-grid">
-        <div class="product-container">
-          <div class="product-image-container">
-            <img class="product-image"
-              src="Images/products/cabbages.jpg">
+      <div class="produces-grid">
+        <div class="produce-container">
+          <div class="produce-image-container">
+            <img class="produce-image"
+              src="Images/produces/cabbages.jpg">
           </div>
 
-          <div class="product-name limit-text-to-2-lines">
+          <div class="produce-name limit-text-to-2-lines">
             Cabbages
           </div>
 
-          <div class="product-rating-container">
-            <img class="product-rating-stars"
+          <div class="produce-rating-container">
+            <img class="produce-rating-stars"
               src="images/ratings/rating-45.png">
-            <div class="product-rating-count link-primary">
+            <div class="produce-rating-count link-primary">
               509
             </div>
           </div>
 
-          <div class="product-price">
+          <div class="produce-price">
             kshs. 90
           </div>
 
-          <div class="product-quantity-container">
+          <div class="produce-quantity-container">
             <select>
               <option selected value="1">1</option>
               <option value="2">2</option>
@@ -90,7 +90,7 @@
             </select>
           </div>
 
-          <div class="product-spacer"></div>
+          <div class="produce-spacer"></div>
 
           <div class="added-to-cart">
             <img src="images/icons/checkmark.png">
@@ -102,29 +102,29 @@
           </button>
         </div>
 
-        <div class="product-container">
-          <div class="product-image-container">
-            <img class="product-image"
-              src="Images/products/english-cucumber.jpg">
+        <div class="produce-container">
+          <div class="produce-image-container">
+            <img class="produc-image"
+              src="Images/produces/english-cucumber.jpg">
           </div>
 
-          <div class="product-name limit-text-to-2-lines">
+          <div class="produce-name limit-text-to-2-lines">
             English Cucumber
           </div>
 
-          <div class="product-rating-container">
-            <img class="product-rating-stars"
+          <div class="produce-rating-container">
+            <img class="produce-rating-stars"
               src="images/ratings/rating-40.png">
-            <div class="product-rating-count link-primary">
+            <div class="produce-rating-count link-primary">
               187
             </div>
           </div>
 
-          <div class="product-price">
+          <div class="produce-price">
             kshs. 10
           </div>
 
-          <div class="product-quantity-container">
+          <div class="produce-quantity-container">
             <select>
               <option selected value="1">1</option>
               <option value="2">2</option>
@@ -139,7 +139,7 @@
             </select>
           </div>
 
-          <div class="product-spacer"></div>
+          <div class="produce-spacer"></div>
 
           <div class="added-to-cart">
             <img src="images/icons/checkmark.png">
@@ -151,29 +151,29 @@
           </button>
         </div>
 
-        <div class="product-container">
-          <div class="product-image-container">
-            <img class="product-image"
-              src="Images/products/mini-cucumber.jpg">
+        <div class="produce-container">
+          <div class="produce-image-container">
+            <img class="produce-image"
+              src="Images/produces/mini-cucumber.jpg">
           </div>
 
-          <div class="product-name limit-text-to-2-lines">
+          <div class="produce-name limit-text-to-2-lines">
             Mini Cucumber
           </div>
 
-          <div class="product-rating-container">
-            <img class="product-rating-stars"
+          <div class="produce-rating-container">
+            <img class="produce-rating-stars"
               src="images/ratings/rating-45.png">
-            <div class="product-rating-count link-primary">
+            <div class="produce-rating-count link-primary">
               800
             </div>
           </div>
 
-          <div class="product-price">
+          <div class="produce-price">
             kshs. 80
           </div>
 
-          <div class="product-quantity-container">
+          <div class="produce-quantity-container">
             <select>
               <option selected value="1">1</option>
               <option value="2">2</option>
@@ -188,7 +188,7 @@
             </select>
           </div>
 
-          <div class="product-spacer"></div>
+          <div class="produce-spacer"></div>
 
           <div class="added-to-cart">
             <img src="images/icons/checkmark.png">
@@ -201,5 +201,6 @@
         </div>
       </div>
     </div>
+    <script src="scripts/fresh.js"></script>
   </body>
 </html>
