styled the shared pages

--- a/fresh.html
+++ b/fresh.html
@@ -19,7 +19,7 @@
     <!-- Here are the CSS files for this page. -->
     <link rel="stylesheet" href="styles/shared/general.css" />
     <link rel="stylesheet" href="styles/shared/fresh-header.css" />
-    <link rel="stylesheet" href="styles/fresh.css" />
+    <link rel="stylesheet" href="styles/pages/fresh.css" />
   </head>
   <body>
     <div class="fresh-header">
