--- a/fresh.html
+++ b/fresh.html
@@ -58,8 +58,7 @@
     <div class="main">
       <div class="produces-grid js-produces-grid"></div>
     </div> 
-    <script src="data/cart.js"></script>
     <script src="data/produces.js"></script>
-    <script src="scripts/fresh.js"></script>
+    <script type="module" src="scripts/fresh.js"></script>
   </body>
 </html>
