--- a/checkout.html
+++ b/checkout.html
@@ -22,15 +22,11 @@
     <div class="checkout-header">
       <div class="header-content">
         <div class="checkout-header-left-section">
-          <a href="fresh.html">
-            <img class="amazon-logo" src="images/amazon-logo.png">
-            <img class="amazon-mobile-logo" src="images/amazon-mobile-logo.png">
-          </a>
         </div>
 
         <div class="checkout-header-middle-section">
           Checkout (<a class="return-to-home-link"
-            href="amazon.html">3 items</a>)
+            href="fresh.html">3 items</a>)
         </div>
 
         <div class="checkout-header-right-section">
@@ -43,156 +39,7 @@
       <div class="page-title">Review your order</div>
 
       <div class="checkout-grid">
-        <div class="order-summary">
-          <div class="cart-item-container">
-            <div class="delivery-date">
-              Delivery date: Wednesday, October 7
-            </div>
-
-            <div class="cart-item-details-grid">
-              <img class="product-image"
-                src="Images/products/cabbages.jpg">
-
-              <div class="cart-item-details">
-                <div class="product-name">
-                  Cabbages
-                </div>
-                <div class="product-price">
-                  kshs. 80
-                </div>
-                <div class="product-quantity">
-                  <span>
-                    Quantity: <span class="quantity-label">2</span>
-                  </span>
-                  <span class="update-quantity-link link-primary">
-                    Update
-                  </span>
-                  <span class="delete-quantity-link link-primary">
-                    Delete
-                  </span>
-                </div>
-              </div>
-
-              <div class="delivery-options">
-                <div class="delivery-options-title">
-                  Choose a delivery option:
-                </div>
-                <div class="delivery-option">
-                  <input type="radio" checked
-                    class="delivery-option-input"
-                    name="delivery-option-1">
-                  <div>
-                    <div class="delivery-option-date">
-                      Friday, October 9
-                    </div>
-                    <div class="delivery-option-price">
-                      FREE Shipping
-                    </div>
-                  </div>
-                </div>
-                <div class="delivery-option">
-                  <input type="radio"
-                    class="delivery-option-input"
-                    name="delivery-option-1">
-                  <div>
-                    <div class="delivery-option-date">
-                      Sartuday, October 10
-                    </div>
-                    <div class="delivery-option-price">
-                      kshs. 100 - 
-                    </div>
-                  </div>
-                </div>
-                <div class="delivery-option">
-                  <input type="radio"
-                    class="delivery-option-input"
-                    name="delivery-option-1">
-                  <div>
-                    <div class="delivery-option-date">
-                      Monday, October 11
-                    </div>
-                    <div class="delivery-option-price">
-                      kshs. 80 - Shipping
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="cart-item-container">
-            <div class="delivery-date">
-              Delivery date: Monday, October 11
-            </div>
-
-            <div class="cart-item-details-grid">
-              <img class="product-image"
-                src="Images/products/english-cucumber.jpg">
-
-              <div class="cart-item-details">
-                <div class="product-name">
-                  English Cucumber
-                </div>
-                <div class="product-price">
-                  kshs. 10
-                </div>
-                <div class="product-quantity">
-                  <span>
-                    Quantity: <span class="quantity-label">1</span>
-                  </span>
-                  <span class="update-quantity-link link-primary">
-                    Update
-                  </span>
-                  <span class="delete-quantity-link link-primary">
-                    Delete
-                  </span>
-                </div>
-              </div>
-
-              <div class="delivery-options">
-                <div class="delivery-options-title">
-                  Choose a delivery option:
-                </div>
-
-                <div class="delivery-option">
-                  <input type="radio" class="delivery-option-input"
-                    name="delivery-option-2">
-                  <div>
-                    <div class="delivery-option-date">
-                      Wednesday, October 7
-                    </div>
-                    <div class="delivery-option-price">
-                      FREE Shipping
-                    </div>
-                  </div>
-                </div>
-                <div class="delivery-option">
-                  <input type="radio" checked class="delivery-option-input"
-                    name="delivery-option-2">
-                  <div>
-                    <div class="delivery-option-date">
-                      Friday, October 9
-                    </div>
-                    <div class="delivery-option-price">
-                      kshs. 100 - Shipping
-                    </div>
-                  </div>
-                </div>
-                <div class="delivery-option">
-                  <input type="radio" class="delivery-option-input"
-                    name="delivery-option-2">
-                  <div>
-                    <div class="delivery-option-date">
-                      Monday, October 11
-                    </div>
-                    <div class="delivery-option-price">
-                      kshs. 80 - Shipping
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+        <div class="order-summary js-order-summary">
         </div>
 
         <div class="payment-summary">
@@ -202,27 +49,27 @@
 
           <div class="payment-summary-row">
             <div>Items (3):</div>
-            <div class="payment-summary-money">$42.75</div>
+            <div class="payment-summary-money">kshs.400</div>
           </div>
 
           <div class="payment-summary-row">
             <div>Shipping &amp; handling:</div>
-            <div class="payment-summary-money">$4.99</div>
+            <div class="payment-summary-money">kshs. 40</div>
           </div>
 
           <div class="payment-summary-row subtotal-row">
             <div>Total before tax:</div>
-            <div class="payment-summary-money">$47.74</div>
+            <div class="payment-summary-money">kshs. 580</div>
           </div>
 
           <div class="payment-summary-row">
-            <div>Estimated tax (10%):</div>
-            <div class="payment-summary-money">$4.77</div>
+            <div>VAT (16%):</div>
+            <div class="payment-summary-money">kshs 60</div>
           </div>
 
           <div class="payment-summary-row total-row">
             <div>Order total:</div>
-            <div class="payment-summary-money">$52.51</div>
+            <div class="payment-summary-money">kshs 501</div>
           </div>
 
           <button class="place-order-button button-primary">
@@ -231,5 +78,7 @@
         </div>
       </div>
     </div>
+
+    <script type="module" src="scripts/checkout.js"></script>
   </body>
 </html>
