--- a/checkout.html
+++ b/checkout.html
@@ -42,39 +42,7 @@
         <div class="order-summary js-order-summary">
         </div>
 
-        <div class="payment-summary">
-          <div class="payment-summary-title">
-            Order Summary
-          </div>
-
-          <div class="payment-summary-row">
-            <div>Items (3):</div>
-            <div class="payment-summary-money">kshs.400</div>
-          </div>
-
-          <div class="payment-summary-row">
-            <div>Shipping &amp; handling:</div>
-            <div class="payment-summary-money">kshs. 40</div>
-          </div>
-
-          <div class="payment-summary-row subtotal-row">
-            <div>Total before tax:</div>
-            <div class="payment-summary-money">kshs. 580</div>
-          </div>
-
-          <div class="payment-summary-row">
-            <div>VAT (16%):</div>
-            <div class="payment-summary-money">kshs 60</div>
-          </div>
-
-          <div class="payment-summary-row total-row">
-            <div>Order total:</div>
-            <div class="payment-summary-money">kshs 501</div>
-          </div>
-
-          <button class="place-order-button button-primary">
-            Place your order
-          </button>
+        <div class="payment-summary js-payment-summary">
         </div>
       </div>
     </div>
