styling the cart

--- a/tracking.html
+++ b/tracking.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="fresh-header">
-        <div class="amazon-header-left-section"></div>
+        <div class="fresh-header"></div>
         <div class="fresh-header-middle-section">
             <input class="search-bar" type="text" placeholder="Search">
             <button class="search-button">
