added the tracking page link to the main landing page

--- a/fresh.html
+++ b/fresh.html
@@ -21,6 +21,15 @@
       </div>
 
       <div class="fresh-header-right-section">
+        <a class="orders-link header-link" href="orders.html">
+          <span class="returns-text">Returns</span>
+        </a>
+
+        <a class="tracking-link header-link" href="tracking.html">
+          <span class="tracking-text">Track</span>
+        </a>
+        
+
         <a class="cart-link header-link" href="checkout.html">
           <img class="cart-icon" src="images/icons/cart-icon.png" />
           <div class="cart-quantity js-cart-quantity">0</div>
